--- a/style.css
+++ b/style.css
@@ -5,4 +5,17 @@
 
 .about-me {
     font-size: 20px;
+    opacity: 0.5;
+}
+
+.title {
+    font-weight: bold;
+}
+
+h1 {
+    color: azure:
+}
+
+body {
+    font-family: Georgia;
 }
